@@ -1,3 +1,8 @@
+2015-06-10 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_ia64.c: Implement inline assembly cache flush,
+	required on multiprocessor systems.
+
 2015-06-06 Paulo Andrade <pcpa@gnu.org>
 
 	* lib/jit_mips-cpu.c, lib/jit_mips-fpu.c, lib/jit_mips.c:
